# ndl

./: .gitignore  README.md  pyproject.toml
assignments/: assignment_5.md
assignments/solution_4/: assignment_4.md  doc_solution_4.md  mnist_fashion_fcnn_simple.ipynb  results_ex1.csv  solution_4_ex1.ipynb  solution_4_ex2.ipynb  utils.py
assignments/solution_5/: doc_solution_5.md  utils.py
exercise_10/: cifar_10_cnn.ipynb  utils.py
exercise_11/: gradcam.py  gradcam_demo.ipynb  utils.py
exercise_12/: LSTM_IMDB-2.ipynb  utils.py  utils_torch.py  xLSTM_IMDB.ipynb
exercise_13/: introduction_transformers.ipynb
exercise_14/: GAN_Fruits 1.ipynb
exercise_7_Michi/: Ex07.ipynb
exercise_8/: keras_layers.ipynb  utils.py
exercise_9/: mnist_fashion_fcnn.ipynb  mnist_fashion_fcnn_simple.ipynb  utils.py
